; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39380.c_find_intel_accelerator_addr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39380.c_find_intel_accelerator_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"trying 0x%llx\0A\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"got it: 0x%llx\0A\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"no luck\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_intel_accelerator_addr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 268435456, i32* %6, align 4
  br label %7

7:                                                ; preds = %23, %2
  %8 = load i32, i32* %6, align 4
  %9 = sext i32 %8 to i64
  %10 = icmp ult i64 %9, -548950507520
  br i1 %10, label %11, label %26

11:                                               ; preds = %7
  %12 = load i32, i32* %6, align 4
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @guess_first(i32 %14, i32 %15, i32 %16)
  %18 = icmp eq i32 %17, -536870212
  br i1 %18, label %19, label %23

19:                                               ; preds = %11
  %20 = load i32, i32* %6, align 4
  %21 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %11
  %24 = load i32, i32* %6, align 4
  %25 = add nsw i32 %24, 4096
  store i32 %25, i32* %6, align 4
  br label %7

26:                                               ; preds = %7
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %26, %19
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @guess_first(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
